practice/5.kubernetes-network/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: my.company.com
    http:
      paths:
      - backend:
          serviceName: my-service
          servicePort: 80
        path: /api
